--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,5 +3,8 @@
 <!-- <app-bind></app-bind> -->
 
 <!-- 响应式编程 -->
-<app-rxjsprogram></app-rxjsprogram>
+<!-- <app-rxjsprogram></app-rxjsprogram> -->
+
+<!-- 管道 -->
+<app-pipes></app-pipes>
 
